# browser

./: .gitignore  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUCCESS_SUMMARY.md  VERIFICATION_REPORT.md  clippy.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: error.rs  health.rs  history.rs  lib.rs  main.rs  main.rs.custom.bak  main.rs.eframe.bak  metrics.rs  navigation.rs  state.rs  ui.html  webview_manager.rs
apps/desktop/tests/: database_integration.rs
docs/decisions/: 001-gui-framework.md  002-servo-research.md  003-basic-ui-implementation.md  004-servo-integration-investigation.md  005-servo-implementation-plan.md
docs/plan/: architecture.md  known-issues.md  requirements.md  tasks.md
