[package]
name = "desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
renderer = { path = "../../packages/renderer" }
network = { path = "../../packages/network" }
storage = { path = "../../packages/storage" }
shared = { path = "../../packages/shared" }

# External dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI (we'll finalize after research)
eframe = { workspace = true }
egui = { workspace = true }

# URL encoding for search queries
urlencoding = "2.1"

# TLS crypto provider for Servo
rustls = { workspace = true }

[[bin]]
name = "browser"
path = "src/main.rs"
